# trame-sample-apps

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
trame_sample_apps/: _base.py  app1.py  app2.py
trame_sample_apps/data/: a.vtk  c.vtp
