[metadata]
name = trame-sample-apps
version = 0.0.1
description = My Sample WebApp by trame
author = yynet2022
url = https://github.com/yynet2022/trame-sample-apps
license = MIT License
keywords =
    Python
    Web
    VTK
    Application

[options]
packages = find:
include_package_data = True
install_requires =
    vtk
    trame
    trame-vtk
    trame-vuetify

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
